--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "astro",
+  "name": "maxames-io",
   "type": "module",
   "version": "1.0.2",
   "packageManager": "pnpm@9.15.0",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "build:mermaid": "for file in src/content/assets/diagrams/*.mmd; do mmdc -i \"$file\" -o \"src/content/assets/$(basename \"$file\" .mmd).svg\" -c mermaid.config.json --width 980 --backgroundColor transparent; done",
+    "build": "npm run build:mermaid && astro build",
     "start": "node dist/server/entry.mjs",
     "preview": "astro preview",
     "astro": "astro",
@@ -21,10 +22,14 @@
     "@shikijs/themes": "^1.26.1",
     "astro": "^5.13.2",
     "astro-expressive-code": "^0.38.3",
+    "elkjs": "^0.11.0",
+    "mermaid": "^11.12.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@mermaid-js/layout-elk": "^0.2.0",
+    "@mermaid-js/mermaid-cli": "^11.12.0",
     "@types/node": "^24.3.0",
     "pagefind": "^1.3.0",
     "shiki": "^1.26.1",
