style: adjust layout and styling for interview prep pages

--- a/mermaid.config.json
+++ b/mermaid.config.json
@@ -6,33 +6,33 @@
   "theme": "base",
   "layout": "elk",
   "themeVariables": {
-    "primaryColor": "#202020",
-    "primaryTextColor": "#ffffff",
-    "primaryBorderColor": "#a277ff",
-    "lineColor": "#ffffff",
-    "background": "#0b0b0b",
-    "mainBkg": "#202020",
-    "secondBkg": "#282828",
-    "tertiaryBkg": "#303030",
-    "textColor": "#ffffff",
-    "darkTextColor": "#ffffff",
-    "nodeBorder": "#a277ff",
-    "clusterBkg": "#202020",
-    "clusterBorder": "#8c5cf5",
-    "edgeLabelBackground": "#202020",
-    "edgeLabelColor": "#ffffff",
-    "nodeTextColor": "#ffffff",
-    "gridColor": "#353535",
-    "sectionBkgColor": "#202020",
-    "altSectionBkgColor": "#282828",
-    "fillType0": "#202020",
-    "fillType1": "#282828",
-    "fillType2": "#303030",
-    "fillType3": "#8c5cf5",
-    "fillType4": "#353535",
-    "fillType5": "#a277ff",
-    "fillType6": "#c2a8fd",
-    "fillType7": "#202020"
+    "primaryColor": "#ffffff",
+    "primaryTextColor": "#3d464d",
+    "primaryBorderColor": "#007ee5",
+    "lineColor": "#3d464d",
+    "background": "#ffffff",
+    "mainBkg": "#ffffff",
+    "secondBkg": "#f8f9fa",
+    "tertiaryBkg": "#e5e7ea",
+    "textColor": "#3d464d",
+    "darkTextColor": "#3d464d",
+    "nodeBorder": "#007ee5",
+    "clusterBkg": "#ffffff",
+    "clusterBorder": "#007ee5",
+    "edgeLabelBackground": "#ffffff",
+    "edgeLabelColor": "#3d464d",
+    "nodeTextColor": "#3d464d",
+    "gridColor": "#e5e7ea",
+    "sectionBkgColor": "#ffffff",
+    "altSectionBkgColor": "#f8f9fa",
+    "fillType0": "#ffffff",
+    "fillType1": "#f8f9fa",
+    "fillType2": "#e5e7ea",
+    "fillType3": "#007ee5",
+    "fillType4": "#7b8994",
+    "fillType5": "#1a8ceb",
+    "fillType6": "#3399f0",
+    "fillType7": "#ffffff"
   },
   "flowchart": {
     "rankSpacing": 60,
