refactor: migrate to pnpm workspaces monorepo
- Move main site to apps/main/
- Configure pnpm workspaces with apps/main and apps/notes
- Add root package.json with workspace scripts
- Update .gitignore for monorepo structure
- Add .pnpmrc with shamefully-hoist and auto-install-peers
- Update README with monorepo dev instructions
- Remove old lockfiles (package-lock.json, bun.lockb)

Each app can now be run independently:
- pnpm dev / pnpm build (main site)
- pnpm dev:notes / pnpm build:notes (blog)

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 # build output
 dist/
+apps/*/dist/
+
 # generated types
 .astro/
+apps/*/.astro/
 
 # dependencies
 node_modules/
+apps/*/node_modules/
 
 # Python virtual environments
 .venv/
